[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrated-gradients"
version = "0.1.0"
description = "Interpret Gaussian Process Models by using Integrated Gradients"
authors = [
    { name = "bbbccc88" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy",
    "matplotlib",
    "torch>=2.7.0",
    "gpytorch",
    "tqdm",
    "dill",
    "pandas",
    "seaborn",
    "numpyro",
    "scikit-learn",
    "pyyaml"
]

[project.optional-dependencies]
notebook = [
    "ipywidgets",
    "jupyterlab",
    "watermark"
]
develop = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools]
py-modules = ["integrated_gradients", "utils"]

[tool.setuptools.package-dir]
"" = "src"
